# pypet

./: .bandit  .codacy.yml  .editorconfig  .gitignore  .landscape.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGES.txt  CLAUDE.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  long_description.txt  pyproject.toml  requirements.txt  runtests.sh  setup.py
.github/scripts/: install.sh  install_gitpython.sh  runtests.sh
.github/workflows/: myworkflow.yml  publish.yml  tests.yml
ciscripts/: install.sh  runtests_travis.sh
ciscripts/appveyor/: DISCLAIMER.txt  install.ps1  runtests.cmd
ciscripts/travis/: install_gitpython.sh  runtests.sh
doc/source/: changelog.rst  code.rst  code_toc.rst  conf.py  contact_license.rst  cookbook.rst  examples.rst  faqs.rst  index.rst  introduction.rst  latex-preamble.tex  latex.rst  latex_contact_license.rst  manual_toc.rst  misc.rst  misc_toc.rst  tutorial.rst
examples/: .gitignore  __init__.py  example_01_first_steps.py  example_01_quick_and_not_dirty.py  example_02_trajectory_access_and_storage.py  example_03_trajectory_merging.py  example_04_multiprocessing.py  example_05_custom_parameter.py  example_06_parameter_presetting.py  example_07_brian_network.py  example_08_f_find_idx.py  example_09_large_results.py  example_10_get_items_from_all_runs.py  example_12_sharing_data_between_processes.py  example_13_post_processing.py  example_14_links.py  example_15_more_ways_to_add_data.py  example_16_multiproc_context.py  example_18_many_runs.py  example_19_using_deap.py  example_19b_using_deap_less_overhead.py  example_19c_using_deap_with_post_processing.py  example_20_using_deap_manual_runs.py  example_21_scoop_multiprocessing.py  example_23_brian2_network.py  example_25_dask_multiprocessing.py  tmp_example_01_first_steps.py
examples/HDF/: Example1_Quick_And_Not_So_Dirty_2013_09_17_17h51m42s.cnt
examples/example_10_large_scale_brian_simulation/: clusternet.py  plot_fano_graph.py  runscript.py
examples/example_11_large_scale_brian_simulation/: clusternet.py  plotff.py  runscript.py
examples/example_13_post_processing/: analysis.py  main.py  pipeline.py
examples/example_17_wrapping_an_existing_project/: .gitignore  original.py  pypetwrap.py
examples/example_22_saga_python/: merge_trajs.py  saga_0.hdf5  start_saga.py  the_task.py
examples/example_24_large_scale_brian2_simulation/: clusternet.py  plotff.py  runscript.py
my_ni_pexp/: .project  .pydevproject  test.py  test_env.py  test_explore.py  test_io.py  test_mp_logging.py  test_nn.py  test_pickle.py  test_running_exp.py  test_running_expnomp.py
my_ni_pexp/doc/: Makefile
my_ni_pexp/examples/: example_01_quick_and_dirty.py
my_ni_pexp/mypet/: _version.py  annotations.py  environment.py  globally.py  globals.py  mplogging.py  parameter.py  petexceptions.py  storageservice.py  testing.py  trajectory.py
my_ni_pexp/pypet/: annotations.py  environment.py  globally.py  naturalnaming.py  parameter.py  petexceptions.py  storageservice.py  trajectory.py
my_ni_pexp/src/: strange_bug.py  test.py  test_env.py  test_explore.py  test_io.py  test_mp_logging.py  test_pickle.py  test_running_exp.py  test_running_expnomp.py  testmp.py
my_ni_pexp/uml/: uml.xmi
old_tests/: strange_bug.py  test.py  test_env.py  test_explore.py  test_mp_logging.py  test_nn.py  test_running_exp.py  test_running_expnomp.py
pylint/: .gitignore  .pylintrc  pylint.sh
pypet/: .fuse_hidden00002cfc00000002  .fuse_hidden0000378200000003  TODO.txt  __init__.py  _version.py  annotations.py  compat.py  environment.py  gitintegration.py  globally.py  naturalnaming.py  parameter.py  petexceptions.py  pypetconstants.py  pypetexceptions.py  pypetlogging.py  shareddata.py  slots.py  storagedata.py  storagedata_backup.py  storageservice.py  trajectory.py
pypet/brian/: __init__.py  network.py  parameter.py
pypet/brian2/: __init__.py  network.py  parameter.py
pypet/logging/: debug.ini  default.ini  env_config_test.ini  main.ini  multiproc.ini  produce_windows_ini.py  test.ini  test_multiproc.ini  windows_default.ini  windows_env_config_test.ini  windows_test.ini
pypet/logging_default/: main.ini
pypet/tests/: _atworema.py  all_examples.py  all_henri_tests.py  all_multi_core_tests.py  all_single_core_tests.py  all_tests.py  annotations_test.py  backwards_compat_test.py  brian_full_network_test.py  brian_parameter_test.py  cover_all_tests.py  coverage_run.py  debug_net_test.py  environment_test.py  hdf5_merge_test.py  hdf5_multiproc_test.py  hdf5_storage_test.py  (+23 more)
travis/: install_minimum_prerequisites.sh  install_minimum_requirements.sh
uml/: uml.xmi  uml_old.xmi
(+205 files in other folders)
